# fleetops

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
.claude/commands/: setup.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: RESEARCH.md
docs/demo/: board.tape
docs/plans/: macos-support-plan.md
fleetops-procargs/: Cargo.toml
fleetops-procargs/src/: lib.rs
plans/001-fleetops-architecture/: 00-SYNTHESIS.md  02-case-studies.md  04-steelman.md  README.md
plans/002-pane-highlight/: README.md
rules/: _index.md  crossroads.md  file-headers.md
rules/rust/: subprocess-safety.md
rules/tools/: plans.md
specs/: 001-wave1-wezterm-lens.md  002-wave2-discovery.md  003-wave3-telemetry.md  004-wave4-fold-doctor.md  005-wave5-wslenv-pane-identity.md  006-wave6-pane-highlight.md  007-wave7-dir-first-badges.md  008-wave8-codex-lane.md  009-wave9-snapshot-tab-index.md  010-wave10-agent-number-age.md  README.md
src/: board.rs  codex.rs  collect.rs  discovery.rs  doctor.rs  error.rs  fold.rs  highlight.rs  main.rs  panes.rs  paths.rs  runner.rs  snapshot.rs  telemetry.rs
src/platform/: linux.rs  macos.rs  mod.rs  procargs.rs
src/tui/: keys.rs  mod.rs  model.rs  view.rs
tests/fixtures/: session-file.json  wezterm-list.json
